# hardware-components

./: .gitignore  LICENSE  README.md  meta.json  tree.json
blender-models/0201-cap/: 0201-cap.blend
blender-models/0201-res/: 0201-res.blend
blender-models/0402/: 0402.blend
blender-models/0402-cap/: 0402-cap.blend
blender-models/0402-cap-eia/: 0402-cap_EIA.blend
blender-models/0402-cap-thermalreliefs-zonesizesettings/: 0402-cap_ThermalReliefs_ZoneSizeSettings.blend
blender-models/0402-res/: 0402-res.blend
blender-models/0402-res-eia/: 0402-res_EIA.blend
blender-models/0402-res-thermalreliefs-zonesizesettings/: 0402-res_ThermalReliefs_ZoneSizeSettings.blend
blender-models/0603/: 0603.blend
blender-models/0603-cap/: 0603-cap.blend
blender-models/0603-diode/: 0603-diode.blend
blender-models/0603-fuse-littelfuse-0467/: 0603-Fuse-Littelfuse-0467.blend
blender-models/0603-res/: 0603-res.blend
blender-models/0603lxxx-fuse-littelfuse/: 0603Lxxx-Fuse-Littelfuse.blend
blender-models/069-enc-000-001/: 069.ENC.000.001.blend
blender-models/0805-cap/: 0805-cap.blend
blender-models/0805-res/: 0805-res.blend
blender-models/0806/: 0806.blend
blender-models/0858-0-15-20-82-14-11-0/: 0858-0-15-20-82-14-11-0.blend
blender-models/0859-0-15-20-82-14-11-0/: 0859-0-15-20-82-14-11-0.blend
blender-models/0895-2c1r-gvh/: 0895-2C1R-GVH.blend  data.json
blender-models/1-2199230-6/: 1-2199230-6.blend
blender-models/10107844-002lf/: 10107844-002LF.blend  data.json
blender-models/1053071202/: 1053071202.blend
hardware-components-scripts/: README.md  pyproject.toml
hardware-components-scripts/hw_library_generator/: main.py
hardware_components_scripts/: pyproject.toml
(+40814 files in other folders)
